infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1 # tells how many pods to create
  selector: # tells deployment how to find the pods it's going to create
    matchLabels:
      app: expiration
  template: # how to create the pods
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: dvgy/expiration
